deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stubu
  labels:
    app.kubernetes.io/name: stubu
spec:
  selector:
    app.kubernetes.io/name: stubu
  ports:
    - name: http
      port: 80
      targetPort: http
